Fixing alignments

--- a/pages/tei-april-2022/components/Header/styles.module.scss
+++ b/pages/tei-april-2022/components/Header/styles.module.scss
@@ -12,7 +12,7 @@
 }
 
 // Establish a 12x3 grid
-.container {
+.grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: min-content min-content min-content;
