--- a/pages/tei-april-2022/styles.module.scss
+++ b/pages/tei-april-2022/styles.module.scss
@@ -5,6 +5,7 @@
   flex-flow: column wrap;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  gap: 1em;
 }
 
 .main {
@@ -16,14 +17,12 @@
 @media screen and (min-width: breakpoints.$breakpoint-lg) {
   .grid {
     flex-flow: row nowrap;
+    justify-content: center;
   }
 
   .main {
-    //flex-grow: 2;
   }
 
   .aside {
-    //width: clamp(10em, 40%, 50em);
-    text-align: center;
   }
 }
